<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="title">OpenSpritz Plugin</string>
	<string name="initializing">Initializing&#8230;</string>
	<string name="failure">Initialization failed, sorry</string>
	<string name="ospritz_menu_item">Open Spritz</string>
	<string name="no_tts_installed">Could not connect TTS engine on your device.</string>
	<string name="initialization_error">Could not get book data from FBReader.</string>
	<string name="language_is_not_set">Book language is not set. Trying to read book in %0.</string>
	<string name="no_data_for_language" formatted="false">Text-to-speech data for %0 are not installed. Trying to read book in %1.</string>
    <string name="seek_text_size">Text Size:</string>
    <string name="seek_wpm">WPM:</string>
    <string name="themes_prompt">Choose a theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_section_title">Themes Settings</string>
    <string name="theme_style_dialog_title">Choose a Theme</string>
    <string name="pref_theme_default">DarkTheme</string>
    <string name="custom_theme_section">Custom Theme</string>
    <string name="action_settings">Settings</string>
    <string name="pref_speed_section_title">Speed Settings</string>
    <string name="pref_text_size_section_title">Text Size Settings</string>
    <string name="text_color_title">Text Color</string>
    <string name="text_color_summary">Text Color</string>
    <string name="background_color_title">Background Color</string>
    <string name="custom_text_color_enabled_title">Custom Text Color</string>
    <string name="custom_background_color_enabled_title">Custom Background Color</string>
    <string name="custom_colors_category">Custom Colors</string>
    <!-- The order of these should not be changed, or will break existing preferences !-->
    <string-array name="themes_array">
        <item>Light</item>
        <item>Dark</item>
        <item>Black</item>
        <!-- <item name="fbreader">FBReader</item>  Todo, get style from fbreader !-->
    </string-array>
</resources>
