<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_theme_section_title">
        <ListPreference
            android:key="theme_style"
            android:title="@string/pref_theme_title"
            android:dialogTitle="@string/theme_style_dialog_title"
            android:entries="@array/pref_themes"
            android:entryValues="@array/pref_themes_values"
            android:defaultValue="@string/pref_theme_default"
            android:summary="%s" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_speed_section_title">
        <com.lukehorvat.NumberPickerDialogPreference
            android:key="wpm_min"
            android:title="Min WPM"
            android:defaultValue="100"
            android:dialogMessage="Minimum Words Per Minute"
            android:max="999"
            app:min="1" />
        <com.lukehorvat.NumberPickerDialogPreference
            android:key="wpm_max"
            android:title="Max WPM"
            android:defaultValue="1000"
            android:dialogMessage="Maximum Words Per Minute"
            android:max="5000"
            app:min="500" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_text_size_section_title">
            <com.lukehorvat.NumberPickerDialogPreference
                android:key="text_size_min"
                android:title="Min Text Size"
                android:defaultValue="4"
                android:dialogMessage="Minimum Text Size"
                android:max="49"
                app:min="1" />
            <com.lukehorvat.NumberPickerDialogPreference
                android:key="text_size_max"
                android:title="Max Text Size"
                android:defaultValue="50"
                android:dialogMessage="Maximum Text Size"
                android:max="250"
                app:min="10" />
        </PreferenceCategory>

</PreferenceScreen>